Resume refactor, minor refactor