@@ -3,7 +3,6 @@ package ru.javawebinar.basejava.storage;
 import ru.javawebinar.basejava.exception.StorageException;
 import ru.javawebinar.basejava.model.Resume;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -39,7 +38,7 @@ public abstract class AbstractArrayStorage extends AbstractStorage<Integer> {
 
     @Override
     protected List<Resume> doCopyAll() {
-        return new ArrayList<>(List.of(Arrays.copyOf(storage, size)));
+        return Arrays.asList(Arrays.copyOf(storage, size));
     }
 
     protected abstract void saveResume(Resume resume);
